--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "browser": "./dist/extension",
   "engines": {
-    "vscode": "^1.48.0"
+    "vscode": "1.48.0"
   },
   "contributes": {
     "viewsWelcome": [
@@ -53,10 +53,10 @@
     "prepublish": "yarn webpack-cli --config extension.webpack.config --mode production"
   },
   "devDependencies": {
-    "@types/vscode": "^1.48.0",
-    "ts-loader": "^4.4.2",
-    "typescript": "^3.9.7",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "@types/vscode": "1.83.1",
+    "ts-loader": "9.5.0",
+    "typescript": "5.2.2",
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4"
   }
 }
