--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
 		"@types/vscode": "^1.48.0",
 		"ts-loader": "^4.4.2",
 		"typescript": "^3.9.7",
-		"typescript-esbuild": "latest",
+		"typescript-esbuild": "0.4.5",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.12"
 	},
