--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
 	"devDependencies": {
 		"@playform/build": "0.0.7",
 		"@playform/document": "0.0.6",
-		"ts-loader": "^4.4.2"
+		"ts-loader": "9.5.1"
 	},
 	"publishConfig": {
 		"access": "public"
