--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	},
 	"description": "Web playground for VS Code",
 	"devDependencies": {
-		"ts-loader": "^9.5.1"
+		"ts-loader": "9.5.1"
 	},
 	"enabledApiProposals": [
 		"fileSearchProvider",
