--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	},
 	"description": "Web playground for VS Code",
 	"devDependencies": {
-		"ts-loader": "^4.4.2"
+		"ts-loader": "4.4.2"
 	},
 	"enabledApiProposals": [
 		"fileSearchProvider",
