--- a/package.json
+++ b/package.json
@@ -1,49 +1,62 @@
 {
-	"activationEvents": [
-		"onFileSystem:memfs",
-		"onDebug"
-	],
-	"browser": "./dist/extension",
-	"contributes": {
-		"taskDefinitions": [
-			{
-				"properties": {
-					"flags": {
-						"description": "Additional build flags.",
-						"type": "array"
-					},
-					"flavor": {
-						"description": "The build flavor. Should be either '32' or '64'.",
-						"type": "string"
-					}
-				},
-				"required": [
-					"flavor"
-				],
-				"type": "custombuildscript"
-			}
-		],
-		"viewsWelcome": [
-			{
-				"contents": "In order to run and debug you'll need to create a local workspace.",
-				"view": "debug"
-			},
-			{
-				"contents": "In order to run and debug you'll need to create a local workspace.",
-				"view": "terminal"
-			}
-		]
-	},
-	"description": "Web playground for VS Code",
-	"devDependencies": {
-		"ts-loader": "9.5.1"
-	},
-	"enabledApiProposals": [
-		"fileSearchProvider",
-		"textSearchProvider"
-	],
-	"name": "vscode-web-playground",
-	"scripts": {
-		"compile": "yarn webpack-cli --config extension.webpack.config --mode production"
-	}
+  "name": "vscode-web-playground",
+  "description": "Web playground for VS Code",
+  "version": "0.0.13",
+  "publisher": "vscode",
+  "license": "MIT",
+  "enabledApiProposals": [
+    "fileSearchProvider",
+    "textSearchProvider"
+  ],
+  "private": true,
+  "activationEvents": [
+    "onFileSystem:memfs",
+    "onDebug"
+  ],
+  "browser": "./dist/extension",
+  "engines": {
+    "vscode": "^1.48.0"
+  },
+  "contributes": {
+    "viewsWelcome": [
+      {
+        "view": "debug",
+        "contents": "In order to run and debug you'll need to create a local workspace."
+      },
+      {
+        "view": "terminal",
+        "contents": "In order to run and debug you'll need to create a local workspace."
+      }
+    ],
+    "taskDefinitions": [
+      {
+        "type": "custombuildscript",
+        "required": [
+          "flavor"
+        ],
+        "properties": {
+          "flavor": {
+            "type": "string",
+            "description": "The build flavor. Should be either '32' or '64'."
+          },
+          "flags": {
+            "type": "array",
+            "description": "Additional build flags."
+          }
+        }
+      }
+    ]
+  },
+  "scripts": {
+    "compile": "yarn webpack-cli --config extension.webpack.config --mode production",
+    "watch": "yarn webpack-cli --config extension.webpack.config --mode production --watch --info-verbosity verbose",
+    "prepublish": "yarn webpack-cli --config extension.webpack.config --mode production"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.48.0",
+    "ts-loader": "^4.4.2",
+    "typescript": "^3.9.7",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
